--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.cjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "@types/crypto-js": "^4.2.2",
+    "axios": "^1.9.0",
     "cloudinary": "^2.6.1",
     "cloudinary-react": "^1.8.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.2",
+    "transbank-sdk": "^5.0.0",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
